# triton-metal

./: .gitignore  CMakeLists.txt  LICENSE.metal  PYPI_RELEASE_CHECKLIST.md  README.md  RELEASE.md  TODO.md  check_environment.py  metal_test  metal_test.cpp  pyproject.toml  run_metal_tests.cpp  setup.py  target.md
.github/ISSUE_TEMPLATE/: metal_backend_issue.md
.github/PULL_REQUEST_TEMPLATE/: metal_backend_pr.md
.github/workflows/: metal-ci.yml  metal_tests.yml
docs/: metal-backend.md
python/triton/backends/metal/: compiler.py  driver.py
python/triton_kernels/bench/: bench_mlp.py
python/triton_kernels/tests/: test_matmul.py  test_routing.py
python/triton_kernels/triton_kernels/: matmul_ogs.py  reduction.py  routing.py  specialize.py  swiglu.py  target_info.py
python/triton_kernels/triton_kernels/compaction_details/: _masked_compaction.py
python/triton_kernels/triton_kernels/matmul_ogs_details/: _common.py  _finalize_matmul.py  _matmul_ogs.py  _p_matmul_ogs.py  _weight_transpose.py  metadata.py  opt_flags.py  opt_flags_amd.py  opt_flags_nvidia.py
python/triton_metal/: README.md  profiler
python/triton_metal/backends/: __init__.py  amd  metal  nvidia
python/triton_metal/examples/: __init__.py  simple_matmul.py  verify_package.py
python/triton_metal/language/: __init__.py
python/triton_metal/runtime/: __init__.py
python/tutorials/: 01-vector-add.py  02-fused-softmax.py  03-matrix-multiplication.py  04-low-memory-dropout.py  05-layer-norm.py  06-fused-attention.py  07-extern-functions.py  08-grouped-gemm.py  09-persistent-matmul.py  10-block-scaled-matmul.py  11-programmatic-dependent-launch.py
scripts/: README.md  README_PUBLISHING.md  build_and_run_metal_tests.sh  build_and_test_wheel.sh  complete_pypi_release.sh  direct_pypi_release.sh  download_llvm_fallback.sh  local_dev_install.sh  manual_llvm_download.sh  post_release_tasks.sh  publish_to_pypi.sh  pypi_release.sh  run_all_metal_tests.sh  run_standalone_metal_test.sh  secure_pypi_upload.sh  setup_pypi_env.sh  simplified_pypi_release.sh  test_metal_kernel.py  test_metal_matmul.py  test_module.py  upload_with_token.sh  verify_package.py  verify_package_config.py
triton_metal-3.3.0rc1/: README.md  pyproject.toml
triton_metal-3.3.0rc1/python/triton_metal/: __init__.py
triton_metal-3.3.0rc1/python/triton_metal.egg-info/: PKG-INFO
unittest/Dialect/TritonMetal/: HardwareDetectionTest.cpp  MLXIntegrationTest.cpp  README.md
unittest/Metal/: CMakeLists.txt  M3OptimizationsTest.cpp  MLXIntegrationTest.cpp  MetalBackendTest.cpp  MetalMemoryManagerTest.cpp  README.md
(+17 files in other folders)
